--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,14 +41,30 @@
             />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <FrameLayout
+        android:id="@+id/my_frame"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_weight="3"
-
         android:focusableInTouchMode="false">
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/mask_image"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitCenter"
+            android:src="@color/white_background"
+            android:visibility="invisible"
+            />
+
+        <ImageView
+            android:id="@+id/visual_image"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitCenter"
+            android:src="@color/white_background"
+            />
+
+    </FrameLayout>
 
 </LinearLayout>
