--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,8 +47,17 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
 
-        android:focusableInTouchMode="false">
+        android:focusableInTouchMode="false"
+        android:weightSum="1">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/textView"
+            android:layout_weight="0.53"
+            android:gravity="center" />
     </LinearLayout>
 
 </LinearLayout>
