--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="129dp"
         android:layout_weight="5"
+        android:id="@+id/mainLayout"
         >
 
         <Button
